<resources>
    <string name="app_name">ProteinTracker</string>
    <string name="text_progmob_main">Silahkan isi</string>
    <string name="help">Help</string>
    <string name="button">Button</string>
    <string name="linear">Linear</string>
    <string name="listview">ListView</string>
    <string name="tugas">Tugas</string>
    <string name="constraint">Constraint</string>
    <string name="table">Table</string>
    <string name="protein_consume">Protein Consume</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tampil">TampilActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tugas">TugasActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>